# takumi-sharp

./: .gitignore  Cargo.toml  LICENSE  README.md  build-and-run-example.sh  package.json
.github/workflows/: build-natives.yml  build-nuget.yml
scripts/: build-natives.ps1  build-natives.sh
takumi-native/: Cargo.toml  build.rs  package.json
takumi-native/examples/: example.rs
takumi-native/src/: lib.rs
takumi-sharp/: TakumiSharp.sln  package.json
takumi-sharp/TakumiSharp/: Class1.cs  TakumiSharp.cs  TakumiSharp.csproj  TakumiSharp.g.cs
takumi-sharp/TakumiSharp.Example/: Program.cs  TakumiSharp.Example.csproj
takumi-sharp/TakumiSharp.Native/: Class1.cs  TakumiSharp.Native.cs  TakumiSharp.Native.csproj
takumi-sharp/TakumiSharp/Bindings/: Bindings.g.cs  ModuleInitializer.cs  NativeLibraryLoader.cs
takumi-sharp/TakumiSharp/Internal/: Renderer.cs
takumi-sharp/TakumiSharp/Models/: ImageFormat.cs  Node.cs  Node.g.cs
