[package]
name = "takumi-native"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "takumi"

[dependencies]
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
takumi = "0.66.0"

[build-dependencies]
csbindgen = "1.9.7"
syn = { version = "2.0", features = ["full", "parsing"] }
